# wal-protocol

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  espidf.sh  init.sh
doc/: main.tex  sample.bib
embedded/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.esp32-c6-devkitc-1
embedded/include/: button.h  logger.h  lora.h  pin.h  screen.h  serial.h  sx1278_lora.h  sx127x.h  test.h  wal_protocol.h
embedded/lib/LoRa/: lora.cpp  lora.h  rf95.h
embedded/lib/Logger/: logger.cpp  logger.h
embedded/old/: rfm_lora.c  rfm_lora.h
embedded/src/: button.c  logger.c  lora.c  main.c  main.cpp  screen.c  serial.c  sx1278_lora.c  test.c
esp-c6/: .gitignore  CMakeLists.txt  sdkconfig
esp-c6/main/: CMakeLists.txt  idf_component.yml  main.cpp
protocol/: .gitignore  CMakeLists.txt
protocol/include/: packet.h  structure.h
protocol/src/: main.c  packet.c
rpi/: .gitignore  CMakeLists.txt
rpi/include/: lora_e5.hpp  uart.hpp
rpi/src/: main.cpp  uart.cpp
simulation/: calculate_lora.py
